--- a/week_9/data_set.Rmd
+++ b/week_9/data_set.Rmd
@@ -13,10 +13,9 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
 ## Data set name
 
-This data is taken from [Tidytuesday](https://github.com/rfordatascience/tidytuesday).
+This data is taken from this [link](https://github.com/rfordatascience/tidytuesday).
 
 ```{r}
 library(tidyverse)
@@ -29,7 +28,7 @@ library(readxl)
 
 ```{r pressure, echo=FALSE}
 library(readr)
-library(readxl)
+
 
 food_consumption <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-02-18/food_consumption.csv') 
 
@@ -40,6 +39,13 @@ global_mortality <- read_excel("global_mortality.xlsx") %>% janitor::clean_names
 # Malaria
 malaria_deaths <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2018/2018-11-13/malaria_deaths.csv")
 
+
+```
+
+## 
+
+```{r}
+library(ggplot2)
 ```
 
 
